<?xml version="1.0" encoding="utf-8"?>
<android.gesture.GestureOverlayView
    android:id="@+id/gestureOverlayView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gestureStrokeType="multiple"
    android:eventsInterceptionEnabled="true"
    android:gestureColor="@color/colorAccent"
    android:uncertainGestureColor="@color/colorPrimaryDark">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/academy_logo" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleText"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLocations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/ic_map"
            android:padding="16dp"
            android:text="@string/our_locations"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnVocabulary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/ic_vocabulary"
            android:padding="16dp"
            android:text="@string/vocabulary_practice"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/ic_web"
            android:padding="16dp"
            android:text="@string/visit_website"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/gestureHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/gesture_hint"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic" />

</RelativeLayout>
</android.gesture.GestureOverlayView>